# altgosling

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  index.html  index.tsx  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
assets/: index.es-10d444b7.js  index.es-277dedfb.js  index.es-2f34c494.js  index.es-3acd4243.js  index.es-45d7fec3.js  index.es-6a140ec8.js  index.es-701a5a1b.js  index.es-748deb7e.js  index.es-922dc3b2.js  index.es-9c0fafeb.js  index.es-9ddf9a7d.js  index.es-9e632253.js  index.es-a61f2009.js  index.es-bad59d6d.js  index.es-ce8b146a.js  index.es-d8da4669.js  index.es-e6325295.js  index.es-e8602518.js  jspdf.es.min-0e3faf48.js  jspdf.es.min-16eda0ef.js  jspdf.es.min-1e940d69.js  jspdf.es.min-227510f6.js  jspdf.es.min-282c0c72.js  jspdf.es.min-2fc60f34.js  jspdf.es.min-40817339.js  jspdf.es.min-429c6509.js  jspdf.es.min-4d0f3668.js  jspdf.es.min-5cd5e647.js  jspdf.es.min-69f7693c.js  jspdf.es.min-722c47a0.js  jspdf.es.min-77636205.js  jspdf.es.min-8190be2e.js  jspdf.es.min-9660e43a.js  jspdf.es.min-9eaca9d8.js  jspdf.es.min-ab46f82e.js  jspdf.es.min-c088be8f.js
demo/: Demo-temp-full-page.tsx  Demo-temp-functions.tsx  Demo-temp-only-gosling.tsx  Demo.css  Demo.tsx  DemoBulkGeneration.tsx  DemoFull.tsx  index.html  main.tsx
docs/: 404.html  README.md  docusaurus.config.ts  (+4 more)
docs-site/: README.md  pnpm-lock.yaml
python/: .gitignore  README.md  example.ipynb  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
python/js/: widget.css  widget.tsx
python/src/altgosling/: __init__.py
(+518 files in other folders)
